Rewrite internal network handling, user-facing APIs are unchanged.